--- a/views/backbone/card-assign.jade
+++ b/views/backbone/card-assign.jade
@@ -15,4 +15,4 @@ script#template-card-assign-view(type="text/template")
   |    - })
   |footer.modal-footer
   |  button#save-board-edit.btn.btn-primary.js-save-assignee Save
-  |  button#cancel-board-edit.btn.js-close-assign-window Cancel
+  |  button#cancel-board-edit.btn.js-cancel-assign-window Cancel
