--- a/views/backbone/card-attachment.jade
+++ b/views/backbone/card-attachment.jade
@@ -1,10 +1,10 @@
 script#template-attachment-view(type="text/template").
   h4 Attachment
-  table.fileupload-table.table-striped.js-attachment-download-table(role='presentation')
+  table.fileupload-table.table-striped.attachment-download-table.js-attachment-download-table(role='presentation')
     tbody
   if isBoardMember
     span.btn.btn-success.fileinput-button
       span Select&nbsp;&nbsp;files...
       input#attachmentUpload(type="file", multiple="", name="attachment")
-    table.fileupload-table.table-striped.js-attachment-upload-table(role='presentation')
+    table.fileupload-table.table-striped.attachment-upload-table.js-attachment-upload-table(role='presentation')
       tbody
