--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,40 +20,44 @@ html
                 link(rel='stylesheet', href='/stylesheets/custom.css')
 
     body
-        block header
-            header#eso-topbar.clearfix
-                a(onclick="cantas.navigateTo('')",title="go back home",class="logo")
-                a(href="#{links.hssPortal}", target="_blank", class="eso-logo") Developed by HSS
-                ul(class="quick-menu unstyled clearfix")
-                    li(class="dropdown header-user")
-                        a(class="dropdown-toggle",data-toggle="dropdown") #{user.username}
-                        ul(class="dropdown-menu dropdown-board")
-                            li: a(href="/logout") Log Out
-                    li(class="dropdown header-user")
-                        a(class="dropdown-toggle",data-toggle="dropdown") Board
-                        ul(class="dropdown-menu dropdown-board")
-                            li: a(onclick="cantas.navigateTo('boards/new')") New
-                            li: a(onclick="cantas.navigateTo('boards/public')") Public Boards
-                            li: a(onclick="cantas.navigateTo('boards/mine')") My Boards
-                            li: a(onclick="cantas.navigateTo('boards/closed')") Closed Boards
-                    li(class="dropdown header-user")
-                        a(class="dropdown-toggle",data-toggle="dropdown") Notification
-                        a(class="reminder") 1
-                        ul(class="dropdown-menu dropdown-notification")
-                            li.all-read: a Mark All as Read
-                    li(class="dropdown header-user")
-                        a(class="dropdown-toggle", onclick="cantas.navigateTo('help')") Help
-                input(type="text",class="quick-search",placeholder="search")
+        div#wrapper
+            block header
+                header#eso-topbar.clearfix
+                    a(onclick="cantas.navigateTo('')",title="go back home",class="logo")
+                    a(href="#{links.hssPortal}", target="_blank", class="eso-logo") Developed by HSS
+                    ul(class="quick-menu unstyled clearfix")
+                        li(class="dropdown header-user")
+                            a(class="dropdown-toggle",data-toggle="dropdown") #{user.username}
+                            ul(class="dropdown-menu dropdown-board")
+                                li: a(href="/logout") Log Out
+                        li(class="dropdown header-user")
+                            a(class="dropdown-toggle",data-toggle="dropdown") Board
+                            ul(class="dropdown-menu dropdown-board")
+                                li: a(onclick="cantas.navigateTo('boards/new')") New
+                                li: a(onclick="cantas.navigateTo('boards/public')") Public Boards
+                                li: a(onclick="cantas.navigateTo('boards/mine')") My Boards
+                                li: a(onclick="cantas.navigateTo('boards/closed')") Closed Boards
+                        li(class="dropdown header-user")
+                            a(class="dropdown-toggle",data-toggle="dropdown") Notification
+                            a(class="reminder") 1
+                            ul(class="dropdown-menu dropdown-notification")
+                                li.all-read: a Mark All as Read
+                        li(class="dropdown header-user")
+                            a(class="dropdown-toggle", onclick="cantas.navigateTo('help')") Help
+                    input(type="text",class="quick-search",placeholder="search")
 
-        block content
+            block content
 
-        block footer
-            footer(class="footer")
-                div(class="hss-logo")
-                div(class="copyright")
-                    | <p>Version #{version} <a href="#{links.bugzilla}" target="_blank">Report an Issue</a></p>
-                    | <p>INTERNAL USE ONLY</p>
-                    | <p>Copyright &copy; 2013 Red Hat, Inc. All rights reserved.</p>
+            input(type="hidden", id="piwik-site-id", value="#{siteId}")
+            input(type="hidden", id="piwik-site-url", value="#{siteUrl}")
+
+            block footer
+                footer(class="footer")
+                    div(class="hss-logo")
+                    div(class="copyright")
+                        | <p>Version #{version} <a href="#{links.bugzilla}" target="_blank">Report an Issue</a></p>
+                        | <p>INTERNAL USE ONLY</p>
+                        | <p>Copyright &copy; 2013 Red Hat, Inc. All rights reserved.</p>
 
         block scripts
             script(type="text/javascript", src="/socket.io/socket.io.js")
@@ -84,3 +88,21 @@ html
                 script(type='text/javascript', src='/javascripts/vendor/jquery.fileupload-process.js')
                 script(type='text/javascript', src='/javascripts/vendor/jquery.fileupload-image.js')
                 script(type='text/javascript', src='/javascripts/vendor/jquery.fileupload-validate.js')
+
+        script(type="text/javascript", class="piwik-tracker").
+            try {
+                var siteId = parseInt($("#piwik-site-id").val());
+                var siteUrl = $("#piwik-site-url").val();
+                var _paq = _paq || [];
+                _paq.push(["trackPageView"]);
+                _paq.push(["enableLinkTracking"]);
+                (function() {
+                  var u=(("https:" == document.location.protocol) ? "https" : "http") + "://"+ siteUrl;
+                  _paq.push(["setTrackerUrl", u+"piwik.php"]);
+                  _paq.push(["setSiteId", siteId]);
+                  var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
+                  g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
+                })();
+            } catch( err ) {
+                throw new Error('Piwik track error, detail:'+err);
+            }
