--- a/views/application.jade
+++ b/views/application.jade
@@ -59,6 +59,7 @@ block append scripts
   include backbone/syncconfig-item
   include backbone/syncconfig-item-edit
   include backbone/syncconfig-item-input
+  include backbone/notification-menu
   include backbone/notification-item
   include backbone/comment-item
   include backbone/move-list
