--- a/views/backbone/card-detail.jade
+++ b/views/backbone/card-detail.jade
@@ -13,6 +13,7 @@ script#template-card-detail-view(type="text/template")
   |        span Label
   |        div.card-filter.clearfix
   |      a.card-vote.js-edit-vote
+  |      a.js-subscribe
   |      div.modal.window-label.window-detail.hide
   |      div.modal.window-assign.window-detail.hide
   |      div.modal.window-vote.window-detail.hide
