FIX: remove deprecated !!! syntax in jade

--- a/views/login.jade
+++ b/views/login.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html
   head
     title= title
@@ -25,7 +25,7 @@ html
     div#browser-version-alert.force-alert.hide.fade
       div.alert-content
         p
-          | Your browser 
+          | Your browser
           span#currentVersion
           |  is too low to run Cantas stably. We recommend Chrome 10+, FireFox 10+, Safari 6+ etc.
         a(href="/standalonehelp#browserSupportMatrix") Browser Support Matrix
