--- a/views/standalone-help.jade
+++ b/views/standalone-help.jade
@@ -1,4 +1,4 @@
-!!! 5
+doctype html
 html
   head
     title= title
@@ -71,7 +71,7 @@ html
             section.row-fluid
               div.span6
                 h2 Add checklists for a card.
-                p You can add checklists for a card. 
+                p You can add checklists for a card.
               div.span6.help-img
             section.row-fluid
               div.span6.help-img
@@ -81,7 +81,7 @@ html
             section.row-fluid
               div.span6
                 h2 Move a list to other places.
-                p You can move a list to other places. 
+                p You can move a list to other places.
               div.span6.help-img
             section.row-fluid
               div.span6.help-img
