--- a/public/stylesheets/demo.css
+++ b/public/stylesheets/demo.css
@@ -1,164 +1,134 @@
 /* General Demo Style */
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
-
-@font-face {
-    font-family: 'AnimalsNormal';
-    src: url('fonts/animals-webfont.eot');
-    src: url('fonts/animals-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/animals-webfont.woff') format('woff'),
-         url('fonts/animals-webfont.ttf') format('truetype'),
-         url('fonts/animals-webfont.svg#AnimalsNormal') format('svg');
+ @import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+ @font-face {
     font-weight: normal;
     font-style: normal;
+    font-family:'AnimalsNormal';
+    src: url('fonts/animals-webfont.eot');
+    src: url('fonts/animals-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/animals-webfont.woff') format('woff'), url('fonts/animals-webfont.ttf') format('truetype'), url('fonts/animals-webfont.svg#AnimalsNormal') format('svg');
 }
-
-html { height: 100%; }
-
-*,
-*:after,
-*:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
+html {
+    height: 100%;
 }
-
+*, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-.clearfix:after {
-	content: "";
-	display: table;
-	clear: both;
+ .clearfix:after {
+    display: table;
+    clear: both;
+    content:"";
 }
-
 body {
-    font-family: 'Lato', Calibri, Arial, sans-serif;
     background: #fff;
+    color: #333;
     font-weight: 300;
     font-size: 15px;
-    color: #333;
+    font-family:'Lato', Calibri, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
 }
-
 a {
-	color: #555;
-	text-decoration: none;
+    color: #555;
+    text-decoration: none;
 }
-
 .container {
-	width: 100%;
-	position: relative;
+    position: relative;
+    width: 100%;
 }
-
 .container.demo-1 {
-	height: 100%;
-	position: absolute;
+    position: absolute;
+    height: 100%;
 }
-
 .clr {
-	clear: both;
-	padding: 0;
-	height: 0;
-	margin: 0;
+    clear: both;
+    margin: 0;
+    padding: 0;
+    height: 0;
 }
-
 .main {
-	width: 90%;
-	margin: 0 auto;
-	position: relative;
+    position: relative;
+    margin: 0 auto;
+    width: 90%;
 }
-
-.container > header,
-.content-wrapper {
-	padding: 30px;
-	width: 80%;
-	max-width: 960px;
-	margin: 0 auto;
+.container > header, .content-wrapper {
+    margin: 0 auto;
+    padding: 30px;
+    max-width: 960px;
+    width: 80%;
 }
-
-.content-wrapper p{
-	padding-top: 30px;
-	line-height: 26px;
+.content-wrapper p {
+    padding-top: 30px;
+    line-height: 26px;
 }
-
 .container > header h1 {
-	font-size: 34px;
-	line-height: 38px;
-	margin: 0;
-	font-weight: 700;
-	color: #333;
-	float: left;
+    float: left;
+    margin: 0;
+    color: #333;
+    font-weight: 700;
+    font-size: 34px;
+    line-height: 38px;
 }
-
 .container > header h1 span {
-	display: block;
-	font-size: 20px;
-	font-weight: 300;
+    display: block;
+    font-weight: 300;
+    font-size: 20px;
 }
-
-
 /* Header Style */
-.codrops-top {
-	line-height: 24px;
-	font-size: 11px;
-	background: #fff;
-	background: rgba(255, 255, 255, 0.8);
-	text-transform: uppercase;
-	z-index: 9999;
-	position: relative;
-	font-family: Cambria, Georgia, serif;
-	box-shadow: 1px 0px 2px rgba(0,0,0,0.2);
+ .codrops-top {
+    position: relative;
+    z-index: 9999;
+    background: #fff;
+    background: rgba(255, 255, 255, 0.8);
+    box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2);
+    text-transform: uppercase;
+    font-size: 11px;
+    font-family: Cambria, Georgia, serif;
+    line-height: 24px;
 }
-
 .codrops-top a {
-	padding: 0px 10px;
-	letter-spacing: 1px;
-	color: #333;
-	display: inline-block;
+    display: inline-block;
+    padding: 0px 10px;
+    color: #333;
+    letter-spacing: 1px;
 }
-
 .codrops-top a:hover {
-	background: rgba(255,255,255,0.6);
+    background: rgba(255, 255, 255, 0.6);
 }
-
 .codrops-top span.right {
-	float: right;
+    float: right;
 }
-
 .codrops-top span.right a {
-	float: left;
-	display: block;
+    display: block;
+    float: left;
 }
-
 /* Demo Buttons Style */
-.codrops-demos {
-	float: right;
-	padding-top: 10px;
+ .codrops-demos {
+    float: right;
+    padding-top: 10px;
 }
-
 .demo-1 .codrops-demos {
-	position: absolute;
-	z-index: 2000;
-	top: 30px;
-	left: 30px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    z-index: 2000;
 }
-
 .codrops-demos a {
     display: inline-block;
     margin: 10px;
+    border-bottom: 4px solid transparent;
     color: #333;
     font-weight: 700;
     line-height: 30px;
-    border-bottom: 4px solid transparent;
 }
-
 .codrops-demos a:hover {
-	color: #883d59;
-	border-color: #883d59;
+    border-color: #883d59;
+    color: #883d59;
 }
-
-.codrops-demos a.current-demo,
-.codrops-demos a.current-demo:hover {
-	color: #aaa;
-	border-color: #aaa;
+.codrops-demos a.current-demo, .codrops-demos a.current-demo:hover {
+    border-color: #aaa;
+    color: #aaa;
 }
