--- a/views/application.jade
+++ b/views/application.jade
@@ -34,7 +34,10 @@ block append scripts
   //- templates for backbone view
   include backbone/help
   include backbone/welcome
+  include backbone/dashboard
+  include backbone/dashboard-navigation
   include backbone/board-list
+  include backbone/card-list
   include backbone/board
   include backbone/board-title
   include backbone/label-assign
@@ -106,8 +109,11 @@ block append scripts
     script(type="text/javascript", src="/javascripts/views/attachment.js")
     script(type="text/javascript", src="/javascripts/models/vote.js")
     script(type="text/javascript", src="/javascripts/views/boardlist.js")
+    script(type="text/javascript", src="/javascripts/views/cardList.js")
     script(type="text/javascript", src="/javascripts/views/help.js")
     script(type="text/javascript", src="/javascripts/views/welcome.js")
+    script(type="text/javascript", src="/javascripts/views/dashboard.js")
+    script(type="text/javascript", src="/javascripts/views/dashboard-navigation.js")
     script(type="text/javascript", src="/javascripts/views/confirmDialog.js")
 
     script(type="text/javascript", src="/javascripts/models/visitor.js")
