Bugfix for undefined list / board error

--- a/views/backbone/card.jade
+++ b/views/backbone/card.jade
@@ -47,12 +47,14 @@ script#template-card-view(type="text/template")
   |    - }
   |    div.card-filter.clearfix
   |  div.card-meta Posted under 
-  |    - if( board.isClosed ) {
-  |    span.muted= list.title
-  |    |   in 
-  |    span.muted= board.title
-  |    - } else {
-  |    a(onclick="cantas.navigateTo('board/\#{board._id}')")= list.title 
-  |    |   in 
-  |    a(onclick="cantas.navigateTo('board/\#{board._id}')")= board.title
+  |    - if ( typeof (list) !== 'undefined' && typeof (board) !== 'undefined' ) {
+  |      - if( board.isClosed ) {
+  |      span.muted= list.title
+  |      |   in 
+  |      span.muted= board.title
+  |      - } else {
+  |      a(onclick="cantas.navigateTo('board/\#{board._id}')")= list.title 
+  |      |   in 
+  |      a(onclick="cantas.navigateTo('board/\#{board._id}')")= board.title
+  |      - }
   |    - }
