REV: Add subscribed cards page to dashboard

--- a/views/backbone/dashboard-navigation.jade
+++ b/views/backbone/dashboard-navigation.jade
@@ -14,3 +14,6 @@ script#template-dashboard-navigation-view(type="text/template")
   |    span
   |    a.nav-cards-mine(onclick="cantas.navigateTo('cards/mine')") My Cards
   |  li
+  |    span
+  |    a.nav-cards-subscribed(onclick="cantas.navigateTo('cards/subscribed')") Subscribed Cards
+  |  li
