REV: Add dashboard tab for assigned cards

--- a/views/backbone/dashboard-navigation.jade
+++ b/views/backbone/dashboard-navigation.jade
@@ -17,3 +17,6 @@ script#template-dashboard-navigation-view(type="text/template")
   |    span
   |    a.nav-cards-subscribed(onclick="cantas.navigateTo('cards/subscribed')") Subscribed Cards
   |  li
+  |    span
+  |    a.nav-cards-assigned(onclick="cantas.navigateTo('cards/assigned')")  Cards Assigned to Me
+  |  li
