--- a/views/backbone/card-list.jade
+++ b/views/backbone/card-list.jade
@@ -2,3 +2,8 @@ script#template-card-list-view(type="text/template")
   |div.board-ul-title
   |  h3= h3Header
   |div.card-archive-list
+
+script#template-card-list-view-no-results(type="text/template")
+  |p.alert.alert-info
+  |  i.icon-info-sign 
+  |  span= message
