--- a/views/backbone/board-list.jade
+++ b/views/backbone/board-list.jade
@@ -14,12 +14,12 @@ script#template-board-list-view(type="text/template")
   |        div.owner.board-name= board.title
   |        span= cantas.utils.formatDate(board.created)
   |        span= board.creatorId.username
-  |        if board.creatorId._id == cantas.user.id
+  |        if isCreator(board)
   |          a.js-open-board.reopen.board-list-status(data-board= board._id, title="Open this board")
   |    else
   |      li
   |        a.owner.board-name(onclick="cantas.navigateTo('board/\#{board._id}')")= board.title
   |        span= cantas.utils.formatDate(board.created)
   |        span= board.creatorId.username
-  |        if board.creatorId._id == cantas.user.id
+  |        if isCreator(board)
   |          a.js-close-board.delete.board-list-status(data-board= board._id, title="Close this board")
