[REV] Update "My Cards" page to have a sidebar for filtering
 - Removed "Subscribed Cards" and "Assigned to me" tabs from dashboard
 - Added filters for created, subscribed and assigned cards
 - Search field to filter results by keyword
 - Ability to show archived cards
 - Due date filtering is still a WIP (cards currently cannot have a due date assigned to them)

--- a/views/application.jade
+++ b/views/application.jade
@@ -73,6 +73,7 @@ block append scripts
   include backbone/admin-config
   include backbone/vote-config
   include backbone/comment-config
+  include backbone/sidebar
 
   - if (process.env.NODE_ENV == 'production')
     script(type="text/javascript", src="/javascripts/dist/cantas-app.min.js")
@@ -118,6 +119,7 @@ block append scripts
 
     script(type="text/javascript", src="/javascripts/models/visitor.js")
     script(type="text/javascript", src="/javascripts/views/boardActiveUsers.js")
+    script(type="text/javascript", src="/javascripts/views/sidebar.js")
 
     script(type="text/javascript", src="/javascripts/views/adminConfig.js")
 
