--- a/views/backbone/card.jade
+++ b/views/backbone/card.jade
@@ -46,3 +46,6 @@ script#template-card-view(type="text/template")
   |      span.order-number= index
   |    - }
   |    div.card-filter.clearfix
+
+script#template-card-meta-view(type="text/template")
+  |div.card-meta= meta
