--- a/public/stylesheets/project.css
+++ b/public/stylesheets/project.css
@@ -759,6 +759,75 @@ input:focus, textarea:focus{
     border-radius: 0;
     z-index: 99;
 }
+
+.sidebar-items {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar-items li {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+}
+
+.sidebar-items a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    line-height: 55px;
+    color: #fff;
+}
+
+.sidebar-items .badge {
+    position: absolute;
+    bottom: 10px;
+    left: 32px;
+    padding: 0;
+    background-color: transparent;
+}
+
+.panel-container {
+    position: absolute;
+    width: 270px;
+    height: 100%;
+    top: 0;
+    right: 50px;
+    background: url(../images/side-bar.png);
+    display: none;
+    overflow: hidden;
+    text-align: left;
+    padding: 15px;
+    color: #fff;
+}
+
+.panel-container .panel-title {
+    margin: 0 0 20px 0;
+    height: 35px;
+    line-height: 35px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.panel-container .section-title {
+    font-weight: bold;
+}
+
+.panel-container label {
+    color: #fff;
+}
+
+.filter-group {
+    margin-bottom: 15px;
+
+}
+
+.sidebar-items i {
+    font-size: 22px;
+}
+
 .member-bar{
     display: block;   
 }
@@ -1658,10 +1727,17 @@ input:focus, textarea:focus  .list-panel>li{
 
 /*=============Static card===============*/
 
-.card-archive-list {}
+.card-archive-list {
+    position: absolute;
+    overflow: auto;
+    top: 56px;
+    left: 0;
+    right: 68px;
+    bottom: 0px;
+}
 .card-archive-list .list-card-static {
     float: left;
-    width: 24%;
+    width: 24.6%;
 }
 .list-card-static:nth-child(4n + 1) {
     clear: left;
@@ -2033,6 +2109,15 @@ z-index: 10000
     text-shadow: none;
 }
 
+/*===================dashboard content=================*/
+
+.dashboard-content {
+    position: relative;
+    padding-right: 40px;
+    height: 100%;
+}
+
+
 /*================Card Modal================*/
 #card-detail  .hidden{
     display: none;
@@ -2336,7 +2421,7 @@ z-index: 10000
     background: #f5f5f5;
     border-right: 2px solid #5ED2AB;
 }
-.checkbox{
+#card-detail .checkbox{
     float: left;
     padding: 0 5px;
     background: #fff;
@@ -2346,7 +2431,7 @@ z-index: 10000
     cursor: pointer;
     border-radius: 10px;
 }
-.checkbox span{
+#card-detail .checkbox span{
   display: none; 
   position: absolute;
   left: -2px;
@@ -2356,13 +2441,13 @@ z-index: 10000
   background: url(../images/cantas-check.png) no-repeat 0 0;
   background-size: 100%;
 }
-.checkbox:hover{
+#card-detail .checkbox:hover{
   border-color: #45B992;
 }
 #card-detail .modal-body .checklist ul li.checked .checkbox{
   border-color: #45B992;
 }
-.checkbox:hover span{
+#card-detail .checkbox:hover span{
   display: none;
 }
 #card-detail .modal-body .checklist ul li.checked .checkbox span{
