Use classes as selectors instead of input name

--- a/views/backbone/sidebar.jade
+++ b/views/backbone/sidebar.jade
@@ -8,33 +8,33 @@ script#template-card-filter-panel-view(type="text/template").
   form(class='filter-form')
     div(class='filter-group')
       h5(class='filter-title') Filter By Keyword
-      input(type='text', placeholder='Enter keyword...', name='keyword', value=keyword)
+      input(type='text', placeholder='Enter keyword...', class='js-cardfilter-keyword', name='keyword', value=keyword)
     div(class='filter-group')
       h5(class='filter-title') Show Cards
       label(class='checkbox')
-        input(type='checkbox', name='created', checked=(created ? 'checked' : undefined))
+        input(type='checkbox', class='js-cardfilter-created', name='created', checked=(created ? 'checked' : undefined))
         | Created By Me
       label(class='checkbox')
-        input(type='checkbox', name='subscribed', checked=(subscribed ? 'checked' : undefined))
+        input(type='checkbox', class='js-cardfilter-subscribed', name='subscribed', checked=(subscribed ? 'checked' : undefined))
         | Subscribed Cards
       label(class='checkbox')
-        input(type='checkbox', name='assigned', checked=(assigned ? 'checked' : undefined))
+        input(type='checkbox', class='js-cardfilter-assigned', name='assigned', checked=(assigned ? 'checked' : undefined))
         | Assigned to me
     div(class='filter-group')
       h5(class='filter-title') Due Date
       label(class='radio')
-        input(type='radio', name='dueDate', value='day', checked=(dueDate=='day' ? 'checked' : undefined))
+        input(type='radio', class='js-cardfilter-dueDate', name='dueDate', value='day', checked=(dueDate=='day' ? 'checked' : undefined))
         | Within the next day
       label(class='radio')
-        input(type='radio', name='dueDate', value='week', checked=(dueDate=='week' ? 'checked' : undefined))
+        input(type='radio', class='js-cardfilter-dueDate', name='dueDate', value='week', checked=(dueDate=='week' ? 'checked' : undefined))
         | Within the next week
       label(class='radio')
-        input(type='radio', name='dueDate', value='any', checked=(dueDate=='any' ? 'checked' : undefined))
+        input(type='radio', class='js-cardfilter-dueDate', name='dueDate', value='any', checked=(dueDate=='any' ? 'checked' : undefined))
         | Anytime
     div(class='filter-group')
       h5(class='filter-title') Hidden Cards
       label(class='checkbox')
-        input(type='checkbox', name='archived', checked=(archived ? 'checked' : undefined))
+        input(type='checkbox', class='js-cardfilter-archived', name='archived', checked=(archived ? 'checked' : undefined))
         | Show archived cards
     div(class='form-footer')
       input(type='submit', class='btn btn-warning', value='filter')
