Update sidebar to use BaseView

--- a/views/backbone/sidebar.jade
+++ b/views/backbone/sidebar.jade
@@ -5,7 +5,7 @@ script#template-sidebar-view(type="text/template").
 
 script#template-card-filter-panel-view(type="text/template").
   h3.panel-title Filter Cards
-  form(class='filter-form')
+  form(class='filter-form js-filter-form')
     div(class='filter-group')
       h5(class='filter-title') Filter By Keyword
       input(type='text', placeholder='Enter keyword...', class='js-cardfilter-keyword', name='keyword', value=keyword)
