--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,7 @@ html
                         li(class="dropdown header-user")
                             a(class="dropdown-toggle",data-toggle="dropdown") #{user.username}
                             ul(class="dropdown-menu dropdown-board")
-                                li: a(href="/account") Settings
+                                li: a(href="/settings") Settings
                                 li: a(href="/logout") Log Out
                         li(class="dropdown header-user")
                             a(class="dropdown-toggle",data-toggle="dropdown") Board
